# modern-python

./: .gitignore  README.md  noxfile.py  pyproject.toml
src/modern_python/: console.py
tests/: test_console.py
