[tool.poetry]
name = "modern-python"
version = "0.1.0"
description = "Modern python project setup"
license = "MIT"
readme = "README.md"
authors = ["pritisolanki <pritiatwork@gmail.com>"]

[tool.poetry.scripts]
modern-python = "modern_python.console:main()"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.27.1"
pytest = "^7.1.2"
pytest-click = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
